2010-05-13 03:05-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSButton.m: Minor formatting cleanup.
	* WinNSMenuItemCell.m: Conditionally display the button theme,
	if the owning view is an NSMenuView, then don't draw the border.
	* WinNSMenu.m: Draw the menu view so that it has a darker border on
	all sides. Added an implemenation of drawBackgroundForMenuView:...

2010-05-13 00:41-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Use popup menus when generating the context
	menus.  Altered r_build_menu(..) function to accept an additional
	parameter to make this possible.

2010-05-12 18:44-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* WinNSMenu.m: Initial changes for theming context menus.
	* WinUXTheme.h: Added code to determine point position using
	Windows-style coordinates.

2010-04-25 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Return NS style paths instead of Windows style.

2010-04-25 Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Switch File Type filters to be a combined filter 
	instead of a series of individual filters.

2010-04-21 01:22-MDT Jonathan Gillaspie <jonathan.gillaspie@testplant.com>

	* WinNSOpenPanel.m: Use wcscpy to copy unichar strings.

2010-04-21 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSMenu.m: Replace ellipsis character with "..."

2010-04-21 Eric Wasylishen <ewasylishen@gmail.com>

	* WinNSBrowserHeader.m: Don't draw a background for browser headers.
	I think this is the best-looking solution for now. We could make
	browsers look like tables, but that would require some work (i.e.
	not drawing the sunken border around columns, getting rid of the
	spacing around columns)

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>
	
	* WinUXThemeInfo.plist: Enable the GSScrollViewNoInnerBorder deafault
	to improve the look of scroll views.

2010-04-18 Eric Wasylishen <ewasylishen@gmail.com>
